mcp-server/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp-server
  labels:
    component: route
  annotations:
    haproxy.router.openshift.io/h1-adjust-buf-size: "true"
    haproxy.router.openshift.io/timeout: "300s"
spec:
  to:
    kind: Service
    name: mcp-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
